--- a/electron-vite-project-sample/src/frontend/SignIn/SignIn.css
+++ b/electron-vite-project-sample/src/frontend/SignIn/SignIn.css
@@ -18,25 +18,36 @@ body, .container-whole {
     margin: 0;
 }
 
-h1 {
+.p1 {
     color: #0f2043;
-    margin-bottom: 0px;
+    margin-bottom: 1px;
     font-family: Inter;
     font-weight: bold;
-    font-size: 5rem;
+    font-size: 70px;
+    margin-top:0;
 }
 
 .p2{
     color: #0f2043;
     margin-top: 0;
     font-family: Inter;
-    font-size: 2rem;
+    font-size: 1.7rem;
+    margin-bottom:1rem;
+}
+.p3{
+
+    color: #9AA2B4;
+    margin-top: 0;
+    font-family: Inter;
+    font-size: .9rem;
+    margin-bottom:2rem;
 }
 .signin-button{
     background:#0f2043;
     color: white;
     font-family: Inter;
     font-weight: 1;
+    border-radius: 13px;
 }
 
 img {
@@ -45,27 +56,6 @@ img {
     width: 1rem;
 }
 
-
-.circle1, .circle2, .circle3 {
-height: 0.9rem;
-width: 0.9rem;
-display: inline-block;
-margin-right: 0.3rem;
-border-radius: 50%;
-}
-
-.circle-container{
-   position: absolute;
-   top: 0.9rem;
-   left: 1rem;
-}
-
-.circle1{
-    background-color: red;
-}
-.circle2{
-    background-color: green;
-}
-.circle3{
-    background-color: yellow;
+.icon{
+    font-size: 30px;
 }
