--- a/electron-vite-project-sample/src/frontend/ProfileSetUp/ProfileSetUpCSS/ProfileSetUp.css
+++ b/electron-vite-project-sample/src/frontend/ProfileSetUp/ProfileSetUpCSS/ProfileSetUp.css
@@ -11,6 +11,14 @@ h1{
     font-size: 56px;
 }
 
+.general-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .signin-container {
     display: flex;
     flex-direction: column;
@@ -65,11 +73,21 @@ h1{
     background-color: rgba(81, 127, 211, 0.3);
     border-radius: 10px;
     color: #517FD3;
-    height: 2rem;
+    height: 2.2rem;
     align-items: center;
     justify-content: center;
     display: flex;
-   
+}
+.removeImage{
+    border: 1px solid rgba(66, 66, 66, 0.205);
+    background-color: rgba(66, 66, 66, 0.205);
+    border-radius: 10px;
+    color: #E13D3D;
+    height: 2.2rem;
+    width: 9.1rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .uploadImage:focus{
@@ -82,7 +100,7 @@ h1{
    align-items: flex-start;
     justify-content: left;
     margin: 0;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-left: 1rem;
 }
 .buttonGroup p {
